# openweather-mcp

./: pyproject.toml
.github/workflows/: ci.yml  release.yml
